--- a/test copy.html
+++ b/test copy.html
@@ -9,6 +9,11 @@
 </head>
 <script>
 
+		
+	alert("You are exiting your apartment to head to the store, however your usual plan of taking the lift down is stopped by an out of order sign. Annoying but not unusual, you must take the stairs.");
+	alert("Just two flights down, you notice what seems to have been the site of a fight, there are droplets of blood on the floor and handrail, and a slightly cracked phone at the edge of the stairwell that was centimetres from falling all the way to the bottom. You pick up the phone.");
+	alert("The phone is still functional, and the screen brightens as you look at it. There are no new messages.");
+     
      
   	function branch0(){
 		document.getElementById("answerset0").style.display = "none";     //deletes old option
